--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,9 @@ input,
   outline: none !important;
   box-shadow: none !important;
 }
-/* input:focus{
+input[type="email"]:focus{
   border-color: #ff136f;
-} */
+}
 a {
   text-decoration: none;
 }
@@ -137,14 +137,20 @@ a {
 }
 /* Shoes Or Backpack Area End */
 /* Footer Area Start */
-.subscribe-content > .section-title {
+.content{
+  max-width: 650px;
+}
+.content > .section-title {
   font-size: 30px;
 }
-.subscribe-content > p {
+.content > p {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: #707070;
+}
+.f-btn-b-r{
+  border-radius: 0 .25rem .25rem 0;
 }
 /* Footer Area End */
 /* Media Queary Start */
